--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -18,6 +18,7 @@
           <th scope="col">Valor Unitario <span class="text-danger">*</span></th>
           <th style="width: 90px;" scope="col">Cantidad <span class="text-danger">*</span></th>
           <th style="width: 150px;" scope="col">Importe</th>
+          <th scope="col">Moneda</th>
           <th style="width: 250px;" scope="col">Concepto<span class="text-danger">*</span></th>
           <th style="width: 120px;" scope="col">Monto a Reembolsar<span class="text-danger">*</span></th>
           <!-- <th style="width: 150px;" scope="col">Observación <span class="text-danger">*</span></th> -->
@@ -47,6 +48,11 @@
           <th class="text-right" scope="">
             <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="importe" type="text"
               name="importe" maxlength="20" class="form-control" disabled style="width: 70px !important;">
+          </th>
+          <th class="text-right" scope="">
+            <select2 [data]="lista_monedas" [options]="{placeholder: 'Seleccione Moneda... '}" [value]="1"
+              (valueChanged)="onMonedaChange($event)" name="moneda" id="moneda" [disabled]="concepto? true : false">
+            </select2>
           </th>
           <th scope="">
             <select2 [data]="lista_cuentas" [options]="{placeholder: 'Seleccione Concepto... '}"
