[add] numero dias por linea comp papel

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -74,11 +74,11 @@
           item.nombre }} </option>
       </select>
     </div>
-    <div *ngIf="mostrar_numero_dias" class="col-md-3">
+    <!-- <div *ngIf="mostrar_numero_dias" class="col-md-3">
       <label for="uuid">Número Dias <span class="requerido">*</span></label>
       <input appNumbersOnly type="text" name="uuid" id="uuid'" maxlength="3" class="form-control"
         formControlName="numero_dias" placeholder="Número Comprobante">
-    </div>
+    </div> -->
 
     <div class="col-md-3 col-sm-4 col-xs-12">
       <button class="btn btn-primary" (click)="abrirModalAgregarAnexos()"> Anexos </button>
