--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -43,9 +43,8 @@
 
       <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="tipo_cambio">Tipo Cambio<span class="requerido">*</span></label>
-        <input currencyMask type="text" formControlName="tipo_cambio" maxlength="10"
-          [readOnly]='header_comprobante.estatus_id === 9 ? true : false' [(ngModel)]="header_comprobante.tipo_cambio"
-          class="form-control" id="tipo_cambio">
+        <input currencyMask type="text" formControlName="tipo_cambio" maxlength="10" [readOnly]='numero_comprobacion'
+          [(ngModel)]="header_comprobante.tipo_cambio" class="form-control" id="tipo_cambio">
       </div>
       <div *ngIf="title === 'Gastos de Viaje'" class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <label for="destino">Destino<span class="requerido">*</span></label>
