--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -47,7 +47,7 @@
             <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="importe" type="text"
               name="importe" maxlength="20" class="form-control" disabled style="width: 70px !important;">
           </th>
-          <th class="text-right" scope="">
+          <th scope="">
             <select2 [data]="lista_monedas" [options]="{placeholder: 'Seleccione Moneda... '}" [value]="1"
               (valueChanged)="onMonedaChange($event)" name="moneda" id="moneda" [disabled]="concepto? true : false">
             </select2>
