[fix] tipo cambio concepto comp papel

--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -19,6 +19,7 @@
           <th style="width: 90px;" scope="col">Cantidad <span class="text-danger">*</span></th>
           <th style="width: 150px;" scope="col">Importe</th>
           <th scope="col">Moneda</th>
+          <th scope="col">Tipo de Cambio</th>
           <th style="width: 250px;" scope="col">Concepto<span class="text-danger">*</span></th>
           <th *ngIf="requerir_numero_dias" scope="col">Número Dias<span class="text-danger">*</span></th>
           <th style="width: 120px;" scope="col">Monto a Reembolsar<span class="text-danger">*</span></th>
@@ -45,12 +46,16 @@
           </th>
           <th class="text-right" scope="">
             <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="importe" type="text"
-              name="importe" maxlength="20" class="form-control" disabled style="width: 70px !important;">
+              name="importe" maxlength="20" class="form-control" disabled>
           </th>
           <th scope="">
             <select2 [data]="lista_monedas" [options]="{placeholder: 'Seleccione Moneda... '}" [value]="1"
               (valueChanged)="onMonedaChange($event)" name="moneda" id="moneda" [disabled]="concepto? true : false">
             </select2>
+          </th>
+          <th class="text-right" scope="">
+            <input currencyMask [options]="{ thousands: ',', decimal: '.',allowNegative: false }"
+              formControlName="tipo_cambio" type="text" name="importe" maxlength="20" value="1.00" class="form-control">
           </th>
           <th scope="">
             <select2 [data]="lista_cuentas" [options]="{placeholder: 'Seleccione Concepto... '}"
