--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -18,6 +18,7 @@
           <th scope="col">Cantidad</th>
           <th scope="col">Importe</th>
           <th style="width: 250px;" scope="col">Concepto</th>
+          <th *ngIf="requiere_numero_dias" scope="col">Numero Dias</th>
           <th scope="col">Monto a Reembolsar</th>
           <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
@@ -45,6 +46,10 @@
             <select2 [data]="lista_cuentas" [options]="{placeholder: 'Seleccione Concepto... '}"
               (valueChanged)="onChangeConcepto($event, i)" name="concepto" id="concepto">
             </select2>
+          </th>
+          <th *ngIf="requiere_numero_dias" class="text-right" scope="">
+            <input *ngIf="controlsConceptos[i].controls.req_numero_dias.value" appNumbersOnly
+              formControlName="numero_dias" type="text" name="numero_dias" maxlength="3" class="form-control">
           </th>
           <th class="text-right" scope="">
             <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="monto_rembolsar"
