ajuste de vista de label,icono,columna

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -38,7 +38,7 @@
           <td class="align-middle">
             <em style="font-size:15px" class="far fa-file-alt btn m-2" (click)="showModal(item)"></em>
             &nbsp;
-            <em title="Anexos" style="font-size:15px" class="fa fa-file btn m-2"
+            <em title="Anexos" style="font-size:15px" class="fas fa-folder-open btn m-2"
               (click)="abrirModalAgregarAnexos(item)"></em>
           </td>
           <td class="align-middle">
