--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.css
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.css
@@ -1,6 +1,6 @@
-#tabla_departamentos_rci {
+/* #tabla_departamentos_rci {
   max-width: 100% !important;
-}
+} */
 
 .ajustar {
   /* word-break: break-all; */
