--- a/src/app/modulos/tipo-gasto/list-rerlaciones-rci/list-rerlaciones-rci.component.html
+++ b/src/app/modulos/tipo-gasto/list-rerlaciones-rci/list-rerlaciones-rci.component.html
@@ -24,7 +24,7 @@
             <tr>
               <th>Nombre</th>
               <th>Frecuencia Fiscal</th>
-              <th>Valor Nacional</th>
+              <th>Monto Deducible</th>
               <th class="centrado">Editar</th>
             </tr>
           </thead>
