[add] ajuste de nota de la cabecera se pueda visualisar en los niveles de aprovacion y cea editable

--- a/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
+++ b/src/app/compartidos/comprobacion-components/form-comprobacion-header/form-comprobacion-header.component.html
@@ -76,7 +76,7 @@
         </div>
       </div>
 
-      <div *ngIf="recuperable_nota === 'recuperable'" class="col-lg-3 col-md-4 col-sm-6 mt-2">
+      <div *ngIf="recuperable_nota === 1" class="col-lg-3 col-md-4 col-sm-6 mt-2">
         <div class="form-group">
           <label for="nota_recuperable">Nota<span class="requerido">*</span></label>
           <textarea class="form-control" formControlName="nota_recuperable" maxlength="500" id="nota_recuperable"
