[update] ajuste Exportar Excel

--- a/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
+++ b/src/app/modulos/bandeja-aprobacion/aprobacion-gastos-viaje/aprobacion-gastos-viaje.component.html
@@ -35,8 +35,8 @@
               <td>{{ item.nombre_usuario}}</td>
               <td>{{ item.descripcion}}</td>
               <td>{{ item.motivo}}</td>
-              <td>{{ item.fecha_creacion| date: 'yyyy-MM-dd' }}</td>
-              <td>{{ item.monto_reembolsar | currency: '$'}}</td>
+              <td>{{ item.fecha_creacion}}</td>
+              <td>{{ item.monto_reembolsar}}</td>
               <td>{{ item.nombre_moneda}}</td>
               <td>{{ item.nombre_cc}}</td>
               <td>{{ item.nombre_compania}}</td>
