--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -44,14 +44,14 @@
               <td>{{ item.nombre_compania}}</td>
               <!-- <td>{{ item.tipo_gasto }}</td> -->
               <td>{{ item.folio_comprobacion}}</td>
-              <td>{{ item.fecha_creacion| date: 'yyyy-MM-dd' }}</td>
+              <td>{{ item.fecha_creacion}}</td>
               <td>{{ item.nombre_usuario}}</td>
               <td>{{ item.nombre_cc}}</td>
               <td>{{ item.recuperable === 1 ? 'Recuperable' : 'No Recuperable' }}</td>
               <td class='ajustar'>{{ item.motivo}}</td>
               <td>{{ item.descripcion}}</td>
               <td>{{ item.nombre_moneda}}</td>
-              <td>{{ item.monto_reembolsar | currency: '$'}}</td>
+              <td>{{ item.monto_reembolsar}}</td>
               <td>{{ item.nombre_usuario_aprobador}}</td>
               <td>
                 <div style="white-space: nowrap">{{ item.estatus }}</div>
