en el filtro de lista de comprobacion de gastos nodo de usuario asistente asistido

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/componentes/filtro-comprobacion/filtro-comprobacion-gv.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/componentes/filtro-comprobacion/filtro-comprobacion-gv.component.html
@@ -55,6 +55,14 @@
                     </select2>
                   </div>
 
+                  <div *ngIf="usuario.usuario_asiste" class="col-md-3 mt-2">
+                    <label for="selec_asistido_usuario">Asistido </label>
+                    <select2 [data]="lista_asistido" [options]="{placeholder: 'Seleccione Usuario Asistido'}"
+                      (valueChanged)="onAsistidoSeleccionado($event)" name="selec_asistido_usuario"
+                      id="selec_asistido_usuario_solicitudes">
+                    </select2>
+                  </div>
+
                   <div class="col-md-3 mt-2">
                     <label for="nombre">Fecha Creación Desde </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_ini" name="fechaIniViaje"
