--- a/src/app/modulos/bandeja-aprobacion/aprobacion-prestaciones/aprobacion-prestaciones.component.html
+++ b/src/app/modulos/bandeja-aprobacion/aprobacion-prestaciones/aprobacion-prestaciones.component.html
@@ -1,3 +1,53 @@
-<p>
-  aprobacion-prestaciones works!
-</p>
+<app-filtro-comprobacion-gv (filtrar)="filtrar($event)" [is_flujo_aprobacion]="true"></app-filtro-comprobacion-gv>
+
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-inverse">
+      <div class="panel-heading">
+        <h4 class="panel-title">Lista de Comprobaciones</h4>
+      </div>
+      <div class="panel-body  table-responsive">
+        <table #datatableElement id="tabla_comprobaciones" datatable [dtOptions]="globals.dtOptions"
+          [dtTrigger]="dtTrigger"
+          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody w-100"
+          style="width: 100%  !important; max-width: 100% !important;">
+          <caption></caption>
+          <thead>
+            <tr>
+              <th *ngFor="let colum of columns" scope="">{{ colum.text }}</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <ng-container *ngFor="let item of lista_comprobantes">
+              <tr>
+                <ng-container *ngFor="let col of columns">
+                  <td *ngIf="col.type">
+                    <span [ngSwitch]="col.type">
+                      <span *ngSwitchCase="'text'">
+                        {{item[col.resp_node] }}
+                      </span>
+                      <span *ngSwitchCase="'currency'">
+                        {{item[col.resp_node] | currency: '$' }}
+                      </span>
+                      <span *ngSwitchCase="'date'">
+                        {{item[col.resp_node] | date: 'yyyy-MM-dd' }}
+                      </span>
+                      <span *ngSwitchDefault>
+                      </span>
+                    </span>
+                  </td>
+                </ng-container>
+                <td>
+                  <button class=" btn btn-primary btn-sm" (click)="editarBorrador(item)"> <em class="fa fas-eye"
+                      (click)="editarBorrador(item)"></em> Ver
+                  </button>
+                </td>
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
