--- a/src/app/modulos/comprobaciones-gastos/components/filtro-comprobaciones-gastos/filtro-comprobaciones-gastos.component.html
+++ b/src/app/modulos/comprobaciones-gastos/components/filtro-comprobaciones-gastos/filtro-comprobaciones-gastos.component.html
@@ -1,7 +1,3 @@
-<!-- este componente se tienen que modificar para poder
-filtrar por comprobaciones de gastos falta definir el filtro
-por el momento se puso este filtro de notas de crédito -->
-
 <div id="content" class="row">
   <div class="panel-heading col-12" style="padding: 10px !Important;">
     <button id="filtroConsulta" class="btn btn-primary mb-2 " type="button" data-toggle="collapse"
@@ -16,16 +12,10 @@ por el momento se puso este filtro de notas de crédito -->
             <form [formGroup]="filtro_comprobacion">
               <fieldset>
                 <legend class="p-b-15" style="font-size:1rem">Filtrar Comprobaciones</legend>
-                <div class="form-row">
 
-                  <div class="col-md-3">
-                    <label for="contribuyente">Usuario<span class="text-danger">*</span> </label>
-                    <select2 [data]="lista_contribuyentes" [options]="{placeholder: 'Seleccione un Usuario'}"
-                      name="contribuyente" id="selec_contribuyente_gasto_viaje">
-                    </select2>
-                  </div>
+                <div class="form-row ">
 
-                  <div class="col-md-3">
+                  <div class="col-md-3 mt-2">
                     <label for="contribuyente">Contribuyente<span class="text-danger">*</span> </label>
                     <select2 [data]="lista_contribuyentes" [options]="{placeholder: 'Seleccione una Contribuyente'}"
                       (valueChanged)="onContribuyenteSelected($event)" name="contribuyente"
@@ -33,58 +23,71 @@ por el momento se puso este filtro de notas de crédito -->
                     </select2>
                   </div>
 
-                  <div class="col-md-3">
+                  <div class="col-md-3 mt-2">
                     <label for="selec_sucursal_gasto_viaje">Centro de Costos </label>
                     <select2 [data]="lista_centros_costo" [options]="{placeholder: 'Seleccione Centro Costo'}"
-                      (valueChanged)="onCentroCostoSelected($event)" name="centro_costo" id="centro_costo">
+                      (valueChanged)="onCentroCostoSelected($event)" [value]="identificador_centro_costo"
+                      name="centro_costo" id="centro_costo" [disabled]="!is_flujo_aprobacion">
                     </select2>
                   </div>
 
-                  <div class="col-md-3">
-                    <label for="selec_estatus_filtro">Estatus Aprobación </label>
+                  <div *ngIf="is_flujo_aprobacion" class="col-md-3 mt-2">
+                    <label for="empleado_supl">Usuario</label>
+                    <select2 [data]="lista_usuario" [value]="(identificador_usuario)" [cssImport]=true class="left"
+                      (valueChanged)="identificadorNombre($event)" [options]="{placeholder: 'Seleccione Usuario'}"
+                      name="nombre" id="nombre">
+                    </select2>
+
+                  </div>
+
+                  <div class=" col-md-3 mt-2">
+                    <label for="folio_comprobacion">Folio Comprobación </label>
+                    <input (keydown)="validaFolioComprobacio($event)" formControlName="folio_comprobacion"
+                      placeholder="Folio Comprobación" type="text" class="form-control" maxlength="20"
+                      name="folio_comprobacion" id="folio_comprobacion_filtro" />
+                  </div>
+
+                  <div *ngIf="estatus_vista" class="col-md-3 mt-2">
+                    <label for="selec_estatus_filtro">Estatus </label>
                     <select2 [data]="lista_estatus" [options]="{placeholder: 'Seleccione Estatus'}"
                       (valueChanged)="onEstatusSeleccionado($event)" name="selec_estatus_filtro"
                       id="selec_estatus_filtro_solicitudes">
                     </select2>
                   </div>
 
-                  <div class="col-md-3">
-                    <label for="selec_estatus_filtro">Tipo de Gasto</label>
-                    <select2 [data]="lista_estatus" [options]="{placeholder: 'Seleccione Tipo de gasto'}"
-                      name="selec_estatus_filtro" id="selec_estatus_filtro_solicitudes">
+                  <div *ngIf="usuario.asistente && asistente_vista" class="col-md-3 mt-2">
+                    <label for="selec_asistido_usuario">Asistido </label>
+                    <select2 [data]="lista_asistido" [options]="{placeholder: 'Seleccione Usuario Asistido'}"
+                      (valueChanged)="onAsistidoSeleccionado($event)" name="selec_asistido_usuario"
+                      id="selec_asistido_usuario_solicitudes">
                     </select2>
                   </div>
 
-                  <div class=" col-md-3">
-                    <label for="folio_comprobacion">Folio Comprobación </label>
-                    <input formControlName="folio_comprobacion" placeholder="Folio Comprobación" type="text"
-                      class="form-control" maxlength="20" name="folio_comprobacion" id="folio_comprobacion_filtro" />
-                  </div>
-
-                  <div class="col-md-3">
-                    <label for="nombre">Registro Desde </label>
+                  <div class="col-md-3 mt-2">
+                    <label for="nombre">Fecha Creación Desde </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_ini" name="fechaIniViaje"
-                      id="fecha_inicio_viaje_anticipo_gasto" [placeholder]="'Fecha Inicio'"
+                      id="fecha_inicio_viaje_anticipo_gasto" [placeholder]="'Registro Desde'"
                       [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaInicioViaje($event)">
                     </my-date-picker>
                   </div>
-
-                  <div class="col-md-3">
-                    <label for="nombre">Registro Hasta </label>
+                  <div class="col-md-3 mt-2">
+                    <label for="nombre">Fecha Creación Hasta </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_fin"
-                      name="fechaFinViaje_anticipo_viaje" id="fechaFinViaje_status_sap" [placeholder]="'Fecha Fin'"
+                      name="fechaFinViaje_anticipo_viaje" id="fechaFinViaje_status_sap" [placeholder]="'Registro Hasta'"
                       [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaFinViaje($event)"></my-date-picker>
                   </div>
 
                 </div>
+
                 <div class="form-group row">
                   <div class=" col-sm-12 text-right">
-                    <button class="btn btn-sm btn-danger m-r-5 " style="margin-left: 10px;"
+                    <button [disabled]="limpiar_disable" class="btn btn-sm btn-danger m-r-5 " style="margin-left: 10px;"
                       (click)="limpiar()">Limpiar</button>
                     <button class="btn btn-sm btn-primary m-r-5 " style="margin-left: 10px;"
                       (click)="buscar()">Buscar</button>
                   </div>
                 </div>
+
 
               </fieldset>
             </form>
