--- a/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-list/prestaciones-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/prestaciones/prestaciones-list/prestaciones-list.component.html
@@ -1,7 +1,10 @@
+<app-filtro-comprobacion-shared (filtrar)="filtrar($event)"></app-filtro-comprobacion-shared>
 <div class="row">
-  <div class="col-md-2" style="padding-bottom: 2em;">
-    <a id="agregarDepartamento" routerLink="/home/comprobaciones/prestaciones/add" class="btn btn-primary"
-      *ngIf="globals.menuDinamico.gastos_comprobacion_prestacion_add"> Nueva Comprobación </a>
+  <div class="col-md-2">
+    <a id="agregarSolicitudAnticipo" *ngIf="globals.menuDinamico.comprobacion_Gastos_Viaje_Add "
+      routerLink="/home/comprobaciones/prestaciones/add" class="btn btn-primary mb-2">
+      Comprobar
+    </a>
   </div>
 </div>
 
@@ -9,31 +12,59 @@
   <div class="col-lg-12">
     <div class="panel panel-inverse">
       <div class="panel-heading">
-        <h4 class="panel-title">Lista - Comprobaciones Prestación</h4>
+        <h4 class="panel-title">Lista de Comprobaciones</h4>
       </div>
-      <div class="panel-body table-responsive">
-        <table id="tabla_departamentos_rci"
+      <div class="panel-body  table-responsive">
+        <table #datatableElement id="tabla_comprobaciones" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
           class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
-          width="100%" style="max-width: 100%; ">
+          style="max-width: 100%; width: 100%;">
+          <caption></caption>
           <thead>
             <tr>
-              <th>Departamento</th>
-              <th>Clave Departamento</th>
-              <th>Estatus</th>
-              <th>Editar</th>
+              <th scope="">Compañía</th>
+              <th scope="">Folio Comprobación</th>
+              <th scope="">Fecha de envío</th>
+              <th scope="">Empleado</th>
+              <th scope="">Centro de Costo</th>
+              <th scope="">Recuperable</th>
+              <th scope="">Motivo</th>
+              <th scope="">Destino</th>
+              <th scope="">Moneda</th>
+              <th scope="">Total Reembolso</th>
+              <th scope="">Jefe Inmediato</th>
+              <th scope="">Estatus</th>
+              <th scope="">Acciónes </th>
             </tr>
           </thead>
+
           <tbody>
-            <tr class="gradeU" *ngFor="let departamento of listaDepartamentosRci"
-              [ngClass]="{'text-danger':departamento.activo == '0'}">
-              <td>{{departamento.descripcion}}</td>
-              <td>{{departamento.clave_departamento}}</td>
-              <td>{{departamento.activo == 1 ? 'Activo' : 'Inactivo'}}</td>
+            <tr class="gradeU" *ngFor="let item of lista_comprobantes">
+              <td>{{ item.nombre_compania}}</td>
+              <td>{{ item.folio_comprobacion}}</td>
+              <td>{{ item.fecha_creacion}}</td>
+              <td>{{ item.nombre_usuario}}</td>
+              <td>{{ item.nombre_cc}}</td>
+              <td>{{ item.recuperable === 1 ? 'Recuperable' : 'No Recuperable' }}</td>
+              <td class='ajustar'>{{ item.motivo}}</td>
+              <td>{{ item.descripcion}}</td>
+              <td>{{ item.nombre_moneda}}</td>
+              <td>{{ item.monto_reembolsar}}</td>
+              <td>{{ item.nombre_usuario_aprobador}}</td>
               <td>
-                <a class="btn btn-primary text-white editar-departamento"
-                  (click)="editarDepartamento(departamento.identificador)">
-                  Editar
-                </a>
+                <div style="white-space: nowrap">{{ item.estatus }}</div>
+                -
+                <div style="white-space: nowrap">{{item.nivel_aprobacion}}</div>
+              </td>
+              <td>
+                <div style="white-space: nowrap">
+                  <a *ngIf="item.estatus.toLowerCase() == 'borrador'" class="btn btn-danger text-white btn ml-2"
+                    (click)="eliminar(item.folio_comprobacion)">
+                    <em class="far fa-trash-alt"> </em> Borrar
+                  </a>
+                  <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item.folio_comprobacion)">
+                    <span> {{item.estatus_id === 9 ? "Consultar" : "Editar" }} </span>
+                  </button>
+                </div>
               </td>
             </tr>
           </tbody>
