--- a/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-list/caja-chica-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/caja_chica/caja-chica-list/caja-chica-list.component.html
@@ -2,11 +2,12 @@
 <div class="row">
   <div class="col-md-2">
     <a id="agregarSolicitudAnticipo" *ngIf="globals.menuDinamico.comprobacion_Gastos_Viaje_Add "
-      routerLink="/home/comprobaciones/caja_chica/add" class="btn btn-primary mb-2">
+      [routerLink]="['/home/comprobaciones',URL_DOCUMENTO,'add']" class="btn btn-primary mb-2">
       Comprobar
     </a>
   </div>
 </div>
+
 
 <div class="row">
   <div class="col-lg-12">
